# lite-agent

./: .gitignore  App.tsx  README.md  index.html  index.tsx  metadata.json  package.json  types.ts
backend/: CLEANUP.md  MIGRATION_COMPLETE.md  README.md  REFACTORING.md  REFACTORING_SUMMARY.md  lite_agent.db  main.py  pyproject.toml  requirements.txt  test_multiconv.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/routes/: chat.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: chat.py  files.py  response.py  tasks.py
backend/app/models/: __init__.py  conversation.py  event.py  task.py
backend/app/schemas/: __init__.py  chat.py  conversation.py  event.py  task.py
backend/app/services/: __init__.py  agent_service.py  conversation_service.py  event_service.py  file_service.py  session_service.py  task_service.py
backend/app/tools/: weather.py
backend/app/utils/: event_helpers.py
backend/core/: ADAPTERS_REFACTORING.md  adapters.py  events.py
backend/project/: env.html
components/: ArtifactPanel.tsx  ChatList.tsx  FloatingInput.tsx  Login.tsx  Sidebar.tsx  WelcomeHero.tsx
docs/: AG_UI_DYNAMIC_RENDERING.md  AUTO_UI_GENERATION.md  EVENT_ORDERING_FIX.md  EVENT_SYSTEM.md  EVENT_TESTING.md  FILE_REFERENCE_MECHANISM.md  FIX_SUMMARY.md  GENERATIVE_UI.md  LOCAL_FILE_BROWSING.md  MIGRATION_GUIDE.md  REFACTORING_PLAN.md  SESSION_MANAGEMENT.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  AppWithEvents.tsx  TestEvents.tsx  index.css  (+1 more)
services/: genai.ts  mockService.ts
(+24 files in other folders)
